--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <script src="./my_wallpaper.js"></script>
     <script src="./libraries/parametricWallpaper.bundle.js"></script>
+    <script src="./libraries/bezierHelper.js"></script>
+    
   </head>
   <body>
   </body>
